<?xml version="1.0"?>
<package format="2">
  <name>robotx_hardware_interface</name>
  <version>0.0.0</version>
  <description>The robotx_hardware_interface package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya kataoka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>usv_control_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>quaternion_operation</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>usv_control_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>quaternion_operation</build_export_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>usv_control_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>quaternion_operation</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
